# DL_DiabeticRetinopathyStagePrediction

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
Docs/: SOW_1.0.docx  System_SRS_1.0.docx
HuggingFace_/: app.py
code/: README.md  config.py  main.py
code/Util/: ImageManipulation.py  KaggleJSON.py  MultiPlatform.py  Terminal_Output.py  check_hardware_and_install.py  cleanup_resources.py  training_Logger.py
code/data/: Dataloader.py  data_preparation.py  dataloader.py
code/data/output/: terminal_out_20241025_1126.txt
code/logs/: terminal_out_20241025_1154.txt  terminal_out_20241025_1155.txt  terminal_out_20241025_1156.txt  terminal_out_20241025_1157.txt
code/models/: inference_model.py  train_model.py
code/models/callbacks/: early_stopping.py
code/production/: TensorboardStats.py  all_defs.py  app.py  haggingface_model.py  requirements.txt  update_production.py
code/production/assets/: dashboard.jsx  style.css
data/: kaggle.json
models/: README.md
my_code/: main.py
my_code/Util/: MultiPlatform.py  check_hardware_and_install.py
my_code/data/: dataPreparation.py  dataloader.py
notebooks/: DownloadDatasets.ipynb  train-vgg16-model-and-run-prediction.ipynb  v1.2_vgg16_model.ipynb  v1.3_customCNN_model.ipynb  v1.4_customCNN_model.ipynb  v2.1_vgg16_model.ipynb  v3.1_resnet18_model.ipynb  v4.6.2a_20epochs_efficientnet-b7_model.ipynb  v4.6.4_10epochs-balanced.ipynb  v4.6a_efficientnet-b7_model.ipynb  v4_5g_efficientnet_b7_model.ipynb  visualize_with_tensorboard.ipynb
presentation/: DLStagePredictPresentation.pptx
src/: ImgUpscale.py  MDataLoader.py  README.md  data_balancer.py  mmain.py  mmodel.py
src/my_data/: Dataloader.py  data_preparation.py
src/my_models/: train_model.py
src/my_production/: update_production.py
src/my_util/: MultiPlatform.py
