[tool.poetry]
name = "dl-diabeticretinopathystageprediction"
version = "0.1.0"
description = "predicting diabetic retinopathy using deep learning technics"
authors = ["Einav Lapid <lapideinav@gmail.com> , Lidi Manov <peru12003@gmail.com> , Guy Yarhi <GUY.YARHI@gmail.com> , Alon Shmuely <alonshmu@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false



#torchvision = "^0.19.1"

[tool.poetry.dependencies]
python = "^3.10"
flopco-pytorch = "^0.1.4"
matplotlib = "^3.9.2"
fastai = "^2.7.17"
seaborn = "^0.13.2"
pandas = "^2.2.3"
huggingface = "^0.0.1"
tomlkit = "^0.13.2"
requests = "^2.32.3"
kaggle = "^1.5.12"


[tool.poetry.group.dev.dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
