[tool.poetry]
name = "dl-diabeticretinopathystageprediction"
version = "0.1.0"
description = "predicting diabetic retinopathy using deep learning technics"
authors = ["Einav Lapid <lapideinav@gmail.com> , Lidi Manov <peru12003@gmail.com> , Guy Yarhi <GUY.YARHI@gmail.com> , Alon Shmuely <alonshmu@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false



#torchvision = "^0.19.1"
# torchaudio = "^2.4.1"

[tool.poetry.dependencies]
#python = "^3.10"
python = ">=3.10,<3.12"
flopco-pytorch = "^0.1.4"
matplotlib = "^3.9.2"
fastai = "^2.7.17"
seaborn = "^0.13.2"
pandas = "^2.2.3"
huggingface = "^0.0.1"
tomlkit = "0.12.0" # "^0.13.2"
requests = "^2.32.3"
kaggle = "^1.5.12"
#tensorflow = "^2.17.0"
tensorflow-io-gcs-filesystem = "^0.31.0"
tensorflow = "^2.12"
#torch = "^2.4.1"
torch = "*"
efficientnet-pytorch = "^0.7.1"
transformers = "^4.46.0"
huggingface-hub = "^0.26.1"
datasets = "^3.0.2"
gradio = "^5.4.0"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
tensorflow-hub = "^0.16.1"
numpy = "^1.26"
opencv-contrib-python = "^4.10.0.84"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
