[tool.poetry]
name = "dl-diabeticretinopathystageprediction"
version = "0.1.0"
description = "predicting diabetic retinopathy using deep learning technics"
authors = ["Einav Lapid <lapideinav@gmail.com> , Lidi Manov <peru12003@gmail.com> , Guy Yarhi <GUY.YARHI@gmail.com> , Alon Shmuely <alonshmu@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false



#torchvision = "^0.19.1"
# torchaudio = "^2.4.1"
# pickle = "*"
# tomlkit = "^0.12.2"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
flopco-pytorch = "^0.1.4"
matplotlib = "^3.9.2"
fastai = "^2.7.17"
seaborn = "^0.13.2"
pandas = "^2.2.3"
huggingface = "^0.0.1"
requests = "^2.32.3"
kaggle = "^1.5.12"
tensorflow-io-gcs-filesystem = "^0.31.0"
tensorflow = "*"
torch = "*"
torchvision = "*"
gradio = "^5.1.0"
environs = "^11.0.0"
gdown = "^5.2.0"
tensorboard = "^2.18.0"
efficientnet-pytorch = "^0.7.1"
torchviz = "^0.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
